# poke-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
elk-config/: logstash.conf
k8s/: deployment.yml  service.yml
src/: __init__.py  cache.py  config.py  database.py  logging_config.py  main.py  models.py  routes.py  schemas.py
src/kafka/: __init__.py  producer.py
src/workers/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py  test_endpoints.py
